# filemanagement_user_file_service

./: README.md  ohos.build
interfaces/kits/js/: BUILD.gn
interfaces/kits/js/src/: fms_napi.cpp  fms_napi.h  module.cpp
interfaces/kits/js/src/common/: uni_error.cpp
interfaces/kits/js/src/common/napi/: n_class.cpp  n_class.h  n_func_arg.cpp  n_val.cpp  n_val.h
interfaces/kits/js/src/common/napi/n_async/: n_async_context.h  n_async_work_callback.cpp  n_async_work_callback.h  n_async_work_factory.h  n_async_work_promise.cpp  n_async_work_promise.h  n_ref.h
sa_profile/: 4933.xml  BUILD.gn
services/: BUILD.gn
services/etc/: fms_service.cfg  fms_service.rc
services/include/: file_manager_service_const.h  fms_const.h  log.h
services/src/client/: file_manager_proxy.cpp  file_manager_proxy.h  fms_proxy.cpp  fms_proxy.h  ifms_client.h
services/src/fileoper/: file_info.h  file_oper.h  fms_file_oper.h  fms_fileinfo.h  fms_mediafile_oper.cpp  fms_mediafile_oper.h  fms_oper_factory.cpp  fms_oper_factory.h  media_file_oper.cpp  media_file_oper.h  oper_factory.cpp  oper_factory.h
services/src/server/: file_manager_service.cpp  file_manager_service.h  file_manager_service_stub.cpp  file_manager_service_stub.h  fms_service.cpp  fms_service.h  fms_service_stub.cpp  fms_service_stub.h
services/test/: BUILD.gn  fms_test.cpp
