# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
FMS_BASE_DIR = "//foundation/storage/services"

ohos_shared_library("filemanager") {
  subsystem_name = "storage"
  part_name = "filemanager"

  relative_install_dir = "module"

  include_dirs = [
 #   "$BASE_DIR/napi",
    "//third_party/node/src",
    "//foundation/ace/napi/interfaces/kits",
    "//utils/native/base/include",
    "//third_party/libuv/include",
    "$FMS_BASE_DIR/include",
    "$FMS_BASE_DIR/src/client",
    "$FMS_BASE_DIR/src/server",
    "$FMS_BASE_DIR/src/fileoper",
  ]

  sources = [
    "src/common/napi/n_async/n_async_work_callback.cpp",
    "src/common/napi/n_async/n_async_work_promise.cpp",
    "src/common/napi/n_async/n_ref.cpp",
    "src/common/napi/n_class.cpp",
    "src/common/napi/n_func_arg.cpp",
    "src/common/napi/n_val.cpp",
    "src/common/uni_error.cpp",
    "src/module.cpp",
    "src/fms_napi.cpp",
  ]

  deps = [
    "//utils/native/base:utils",
    "$FMS_BASE_DIR:fms_server",
    "//foundation/ace/napi:ace_napi",
  ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}





